--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <!-- Preconnect to important origins -->
+    <link rel="preconnect" href="https://blogappbackend-hkzw.onrender.com" crossorigin />
+    <link rel="dns-prefetch" href="https://blogappbackend-hkzw.onrender.com" />
+    
     <!-- SEO Meta Tags -->
     <meta name="description" content="BlogApp - A modern, full-featured blogging platform for creating, sharing, and discovering content. Built with React, Redux, and Tailwind CSS." />
     <meta name="keywords" content="blog, blogging platform, react blog, social media, content sharing, image posts" />
